# ashitaba

./: .gitignore  .tool-versions  Makefile  README.md  go.mod  main.go  package.json  pnpm-lock.yaml  tsconfig.json
cmd/: pc.go  pc_test.go
cpp/: CMakeLists.txt
cpp/src/: CMakeLists.txt
cpp/src/am/: CMakeLists.txt  am1.cc
cpp/tests/: CMakeLists.txt  am1.cc
internal/: main.c
kotlin/: pom.xml
kotlin/src/main/kotlin/brown/: Main1.kt  Main2.kt  Main3.kt  Main4.kt  Main5.kt
kotlin/src/test/kotlin/brown/: Test1.kt  Test2.kt  Test3.kt  Test4.kt  Test5.kt
src/: index.ts
